# vscode-config

./: .gitattributes  PowerShell.7z  README.md
CSAPP/src/: a.c
Markdown/: template.md
Markdown/.pandoc/: defaults.yaml  github-pandoc.css  github.css
Markdown/css/: github-pandoc.css
assbemly/: clang-format.fish
c/: .clang-format  clang-format.fish
cmake/: CMakeLists.txt
front-end/js/: jsconfig.json  rollup.config.js  tsconfig.json
front-end/ts/: tsconfig.json
global/: configs.fish  configs.ps1  extensions.txt  keybindings.json  settings.json
global/runtime/: argv.json
global/snippets/: python.json  typescript.json  vue.json
huggingface/: .env
js/: index.html
js/src/: jsconfig.json
lsyncd/.lsyncd/: conf.lua
manjaro/: N卡笔记本.md  manjaro安装之后.md  manjaro安装小记.md
python/: pyproject.toml
